Closed Bug 564917 Opened 15 years ago Closed 15 years ago

PluginModuleParent::NPP_New returns NPError as nsresult

Categories

(Core Graveyard :: Plug-ins, defect)

x86
macOS
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: jaas, Assigned: jaas)

Details

Attachments

(1 file)

Attached patch fix v1.0Splinter Review
PluginModuleParent::NPP_New has a return type of nsresult, at one point it returns an NPError value. We should fix that.
Attachment #444492 - Flags: review?(jones.chris.g)
Comment on attachment 444492 [details] [diff] [review] fix v1.0 Yeah, this is a mini-regression from bug 516509.
Attachment #444492 - Flags: review?(jones.chris.g) → review+
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: