Fix case where we return an NPError value as an nsresult in PluginModuleParent. b=564917 r=cjones